# ai-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_project/: cli.py  core.py  info.py  main.py  predict.py  schemas.py  server.py
src/ai_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_app.py  test_cli.py  test_meta.py  test_predict.py  test_predict_edges.py  test_predict_tdd.py
